--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "axios": "^1.7.9", 
     "react-tinder-card": "^1.6.4"
   },
   "scripts": {
